# Fraud-Detection-VAE

./: .gitignore  README.md  SupervisedBaseline.ipynb  VAE.ipynb  best_model.pth  improved_model.pth  pyproject.toml
fraudguard/: __init__.py  conformal.py  datasets.py  metrics.py  seed.py  viz.py
notebooks/: SupervisedBaseline.ipynb  VAE.ipynb  best_model.pth
notebooks/outputs_vae_conformal/: vae_best_weights.pt
src/fraudguard/: conformal.py  datasets.py
